Исправление алгоритма рекомендаций